fix doc -a flag is no longer supported fix test_random_dynamic_add_remove on trex16

--- a/doc/trex_stateless.asciidoc
+++ b/doc/trex_stateless.asciidoc
@@ -2027,7 +2027,7 @@ To run the traffic profile from console in TRex, use the following command.
 
 [source,bash]
 ----
-trex>start -f stl/simple_3pkt.py -m 10mbps -a 
+trex>start -f stl/simple_3pkt.py -m 10mbps
 ----
 
 ==== Tutorial:  Multi burst streams - action next stream   
