doc: minor fix the URL
Signed-off-by: Hanoh Haim <hhaim@cisco.com>

--- a/doc/release_notes.asciidoc
+++ b/doc/release_notes.asciidoc
@@ -26,7 +26,7 @@ ifdef::backend-docbook[]
 
 endif::backend-docbook[]
 
-== Release 2.62 ==
+== Release 2.62(pre)  ==
 
 * STF
 ** Keep Multicast/Broadcast destination IPs upon sending
