--- a/doc/release_notes.asciidoc
+++ b/doc/release_notes.asciidoc
@@ -26,7 +26,7 @@ ifdef::backend-docbook[]
 
 endif::backend-docbook[]
 
-== Release 2.62(pre)  ==
+== Release 2.62  ==
 
 * STF
 ** Keep Multicast/Broadcast destination IPs upon sending
